Added spacing property

--- a/index.html
+++ b/index.html
@@ -1,17 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
+	<link rel="stylesheet" href="style.css">
 	<title>Stella Odewumi</title>
 </head>
 <body>
 	<nav>
-		<div class="logo">Stella Odewumi</div>
-		<ul>
-			<li>About</li>
-			<li>Work</li>
-			<li>Contact</li>
-		</ul>
+		<div class="spacing clearflix">
+			<div class="logo">Stella Odewumi</div>
+			<ul>
+				<li>About</li>
+				<li>Work</li>
+				<li>Contact</li>
+			</ul>		
+		</div>
 	</nav>
+
+	<section class="hero">
+		<div class="spacing">
+				<h1>Full-Stack</h1>
+				<h1>Engineer</h1>
+		</div>
+	</section>
+
 	<section>
 		<p>
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
