Positioned elements in hero and navigation

--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
 	</nav>
 
 	<section class="hero">
-		<div class="spacing">
+		<div class="spacing flex">
+			<div class="hero-text">
 				<h1>Full-Stack</h1>
 				<h1>Engineer</h1>
+			</div>
 		</div>
 	</section>
 
