--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link href='https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700,300|Lato:400,700' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
 	<link rel="stylesheet" href="style.css">
 	<title>Stella Odewumi</title>
@@ -8,8 +10,9 @@
 <body>
 	<nav>
 		<div class="spacing spacing--nav clearflix">
-			<div class="logo">Stella Odewumi</div>
-			<ul>
+			<div class="logo animation fade-up">
+			Fullstack Engineer</div>
+			<ul class="animation fade-up">
 				<li>About</li>
 				<li>Work</li>
 				<li>Contact</li>
@@ -20,23 +23,22 @@
 	<section class="hero">
 		<div class="spacing flex">
 			<div class="hero-text">
-				<h1>Full-Stack</h1>
-				<h1>Engineer</h1>
+				<h1 class="animation fade-right">Stella</h1>
+				<h1 class="animation fade-left">Odewumi</h1>
 			</div>
 		</div>
 	</section>
 
 	<section class="description">
-		<div class="spacing spacing--description">
+		<div class="spacing spacing-sections">
 			<p>
 				Hi I'm Stella!
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat.
+				quis nostrud exercitation ullamco laboris.
 			</p>
 
-			<div class="expanded-description">
+			<div class="columns">
 				<p>
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -54,78 +56,98 @@
 					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 				</p>
-			</div>
 			
 		</div>
 	</section>
+	<hr>
+	<section class="portfolio">
+		<div class="spacing spacing-sections">
+			<h2>My Work</h2>
+			<div class="columns columns--portfolio">
+				<p>
+					<img src="http://loremflickr.com/420/240/cat">
+				</p>
 
-	<section>
-		<h2>View My Work</h2>
-		<div>
-			<p>
-				<img src="http://loremflickr.com/320/240/cat">
-			</p>
+				<div>
+					<h3>Name Two</h3>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+						proident, sunt in culpa qui officia deserunt mollit anim id est laborum <br>
 
-			<p>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-			</p>
+						<a href="#">View On Yelp</a>
+					</p>
+
+				</div>
+			</div>
+			<div class="columns columns--portfolio">
+				<p>
+					<img src="http://loremflickr.com/420/240/cat">
+				</p>
+
+				<div>
+					<h3>Name Two</h3>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+						proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+						<br>
+
+						<a href="#">View On Github</a>
+					</p>
+				</div>
+			</div>
+			<div class="columns columns--portfolio">
+				<p>
+					<img src="http://loremflickr.com/420/240/cat">
+				</p>
+
+				<div>
+					<h3>Name Two</h3>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+						proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+						<br>
+
+						<a href="#">View On Github</a>
+					</p>
+				</div>
+			</div>	
 		</div>
-		<div>
-			<p>
-				<img src="http://loremflickr.com/320/240/cat">
-			</p>
+
+	</section>
+
+	<section class="contact">
+		<div class="spacing spacing-sections">
+			<h2>Contact</h2>
 
 			<p>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-			</p>
-		</div>
-		<div>
-			<p>
-				<img src="http://loremflickr.com/320/240/cat">
-			</p>
+				I'm currently looking for work. Feel free to contact me at:
 
-			<p>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+				<span>stellaodewumi@gmail.com</span>
 			</p>
 		</div>
 	</section>
 
-	<section>
-		<h2>Contact</h2>
-
-		<p>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
-			<span>stellaodewumi@gmail.com</span>
-		</p>
-
-	</section>
-
-	<section>
+	<footer>
 		<p>Made by Stella Odewumi</p>
 
-		<p>Icon1, Icon2, Icon3</p>
-	</section>
+		<ul>
+			<li>1</li>
+			<li>2</li>
+			<li>3</li>
+		</ul>
+	</footer>
 
 </body>
 </html>
