Added contact section and removed header

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 	<link href='https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700,300|Lato:400,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
+	<link rel="stylesheet" href="responsive-nav.css">
+	<script src="responsive-nav.min.js"></script>
+	<script src="main.js"></script>
 	<link rel="stylesheet" href="style.css">
 	<title>Stella Odewumi</title>
 </head>
@@ -59,13 +62,13 @@
 			
 		</div>
 	</section>
-	<hr>
+
 	<section class="portfolio">
 		<div class="spacing spacing-sections">
 			<h2>My Work</h2>
 			<div class="columns columns--portfolio">
 				<p>
-					<img src="http://loremflickr.com/900/240/cat">
+					<img src="http://loremflickr.com/900/480/cat">
 				</p>
 
 				<div>
@@ -78,14 +81,16 @@
 						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 						proident, sunt in culpa qui officia deserunt mollit anim id est laborum <br>
 
-						<a href="#">View On Yelp</a>
+
+						<a href="#"> View On Github</a>
+
 					</p>
 
 				</div>
 			</div>
 			<div class="columns columns--portfolio">
 				<p>
-					<img src="http://loremflickr.com/900/240/cat">
+					<img src="http://loremflickr.com/900/480/cat">
 				</p>
 
 				<div>
@@ -99,13 +104,13 @@
 						proident, sunt in culpa qui officia deserunt mollit anim id est laborum
 						<br>
 
-						<a href="#">View On Github</a>
+						<a href="#"> View On Github</a>
 					</p>
 				</div>
 			</div>
 			<div class="columns columns--portfolio">
 				<p>
-					<img src="http://loremflickr.com/420/240/cat">
+					<img src="http://loremflickr.com/900/480/cat">
 				</p>
 
 				<div>
@@ -117,9 +122,8 @@
 						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 						proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-						<br>
-
-						<a href="#">View On Github</a>
+						
+						<a href="#"> View On Github</a>
 					</p>
 				</div>
 			</div>	
@@ -132,22 +136,17 @@
 			<h2>Contact</h2>
 
 			<p>
-				I'm currently looking for work. Feel free to contact me at:
-
-				<span>stellaodewumi@gmail.com</span>
+				Interested in working together? Want to stay in touch? Feel free to reach out at my email, stellaodewumi@gmail.com, or these other channels!
 			</p>
+
+			<ul>
+				<li><a href="#"><i class="fa fa-envelope"></i> Email</a></li>
+				<li><a href="#"><i class="fa fa-github"></i> Github</a></li>
+				<li><a href="#"><i class="fa fa-linkedin"></i> LinkedIn</a></li>
+				<li><a href="#"><i class="fa fa-twitter"></i> Twitter</a></li>
+			</ul>
 		</div>
 	</section>
-
-	<footer>
-		<p>Made by Stella Odewumi</p>
-
-		<ul>
-			<li>1</li>
-			<li>2</li>
-			<li>3</li>
-		</ul>
-	</footer>
 
 </body>
 </html>
