Refactored navigation- made markup more semantic

--- a/index.html
+++ b/index.html
@@ -11,17 +11,20 @@
 	<title>Stella Odewumi</title>
 </head>
 <body>
-	<nav>
-		<div class="spacing spacing--nav clearflix">
+	<header>
+		<div class="spacing clearflix">
 			<div class="logo animation fade-up">
 			Fullstack Engineer</div>
-			<ul class="animation fade-up">
-				<li>About</li>
-				<li>Work</li>
-				<li>Contact</li>
-			</ul>		
+			<nav>
+				<ul class="animation fade-up">
+					<li>About</li>
+					<li>Work</li>
+					<li>Contact</li>
+				</ul>
+			</nav>
 		</div>
-	</nav>
+
+	</header>
 
 	<section class="hero">
 		<div class="spacing flex">
