--- a/index.html
+++ b/index.html
@@ -4,29 +4,26 @@
 	<link href='https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700,300|Lato:400,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
-	<link rel="stylesheet" href="responsive-nav.css">
-	<script src="responsive-nav.min.js"></script>
+	<script src="js/responsive-nav.js"></script>
 	<script src="main.js"></script>
 	<link rel="stylesheet" href="style.css">
 	<title>Stella Odewumi</title>
 </head>
 <body>
 	<header>
-		<div class="spacing clearflix">
-			<div class="logo animation fade-up">
-			Fullstack Engineer</div>
-			<nav>
-				<ul class="animation fade-up">
-					<li>About</li>
-					<li>Work</li>
-					<li>Contact</li>
-				</ul>
-			</nav>
-		</div>
+		<a href="#home" class="logo" data-scroll>Fullstack Engineer</a>
 
+		<nav class="nav-collapse">
+			<ul>
+	          <li class="menu-item active"><a href="#home" data-scroll>Home</a></li>
+	          <li class="menu-item"><a href="#about" data-scroll>About</a></li>
+	          <li class="menu-item"><a href="#work" data-scroll>Work</a></li>
+	          <li class="menu-item"><a href="#contact" data-scroll>Contact</a></li>
+			</ul>
+		</nav>
 	</header>
 
-	<section class="hero">
+	<section id="home" class="hero">
 		<div class="spacing flex">
 			<div class="hero-text">
 				<h1 class="animation fade-right">Stella</h1>
@@ -35,7 +32,7 @@
 		</div>
 	</section>
 
-	<section class="description">
+	<section id="about" class="description">
 		<div class="spacing spacing-sections">
 			<p>
 				Hi I'm Stella!
@@ -66,7 +63,7 @@
 		</div>
 	</section>
 
-	<section class="portfolio">
+	<section id="work" class="portfolio">
 		<div class="spacing spacing-sections">
 			<h2>My Work</h2>
 			<div class="columns columns--portfolio">
@@ -134,7 +131,7 @@
 
 	</section>
 
-	<section class="contact">
+	<section id="contact" class="contact">
 		<div class="spacing spacing-sections">
 			<h2>Contact</h2>
 
@@ -151,5 +148,8 @@
 		</div>
 	</section>
 
+    <script src="js/fastclick.js"></script>
+    <script src="js/scroll.js"></script>
+    <script src="js/fixed-responsive-nav.js"></script>
 </body>
 </html>
