Added spacing to navbar

--- a/index.html
+++ b/index.html
@@ -6,21 +6,24 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
 	<script src="js/responsive-nav.js"></script>
 	<script src="main.js"></script>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="css/style.css">
 	<title>Stella Odewumi</title>
 </head>
 <body>
 	<header>
-		<a href="#home" class="logo" data-scroll>Fullstack Engineer</a>
+		<div class="spacing spacing--nav">
+			<a href="#home" class="logo animation fade-up" data-scroll>Fullstack Engineer</a>
 
-		<nav class="nav-collapse">
-			<ul>
-	          <li class="menu-item active"><a href="#home" data-scroll>Home</a></li>
-	          <li class="menu-item"><a href="#about" data-scroll>About</a></li>
-	          <li class="menu-item"><a href="#work" data-scroll>Work</a></li>
-	          <li class="menu-item"><a href="#contact" data-scroll>Contact</a></li>
-			</ul>
-		</nav>
+			<nav class="nav-collapse animation fade-up">
+				<ul>
+		          <li class="menu-item active"><a href="#home" data-scroll>Home</a></li>
+		          <li class="menu-item"><a href="#about" data-scroll>About</a></li>
+		          <li class="menu-item"><a href="#work" data-scroll>Work</a></li>
+		          <li class="menu-item"><a href="#contact" data-scroll>Contact</a></li>
+				</ul>
+			</nav>
+		</div>
+
 	</header>
 
 	<section id="home" class="hero">
