Added icons and added new stylesheet as ficed-responsive-nav.css

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
 	<script src="js/responsive-nav.js"></script>
 	<script src="main.js"></script>
+	<link rel="stylesheet" href="css/fixed-responsive-nav.css">
 	<link rel="stylesheet" href="css/style.css">
 	<title>Stella Odewumi</title>
 </head>
@@ -125,7 +126,7 @@
 						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 						proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-						
+						<br>
 						<a href="#"> View On Github</a>
 					</p>
 				</div>
