--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 			<nav class="nav-collapse animation fade-up">
 				<ul>
 		          <li class="menu-item active"><a href="#home" data-scroll>Home</a></li>
-		          <li class="menu-item"><a href="#about" data-scroll>About</a></li>
-		          <li class="menu-item"><a href="#work" data-scroll>Work</a></li>
+		          <li class="menu-item"><a href="#description" data-scroll>About</a></li>
+		          <li class="menu-item"><a href="#portfolio" data-scroll>Work</a></li>
 		          <li class="menu-item"><a href="#contact" data-scroll>Contact</a></li>
 				</ul>
 			</nav>
@@ -29,15 +29,15 @@
 
 	<section id="home" class="hero">
 		<div class="spacing flex">
-			<div class="hero-text">
+			<div>
 				<h1 class="animation fade-right">Stella</h1>
 				<h1 class="animation fade-left">Odewumi</h1>
 			</div>
 		</div>
 	</section>
 
-	<section id="about" class="description">
-		<div class="spacing spacing-sections">
+	<section id="description" class="description">
+		<div class="spacing spacing--description">
 			<p>
 				Hi I'm Stella!
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -45,7 +45,7 @@
 				quis nostrud exercitation ullamco laboris.
 			</p>
 
-			<div class="columns">
+			<div class="columns columns--description">
 				<p>
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -54,7 +54,6 @@
 					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 				</p>
-
 				<p>
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -67,8 +66,8 @@
 		</div>
 	</section>
 
-	<section id="work" class="portfolio">
-		<div class="spacing spacing-sections">
+	<section id="portfolio" class="portfolio">
+		<div class="spacing">
 			<h2>My Work</h2>
 			<div class="columns columns--portfolio">
 				<p>
@@ -83,11 +82,11 @@
 						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-						proident, sunt in culpa qui officia deserunt mollit anim id est laborum <br>
+						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
-
-						<a href="#"> View On Github</a>
-
+						<span>
+							<a href="#"> View On Github</a>
+						</span>
 					</p>
 
 				</div>
@@ -106,9 +105,10 @@
 						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 						proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-						<br>
 
-						<a href="#"> View On Github</a>
+						<span>
+							<a href="#"> View On Github</a>
+						</span>
 					</p>
 				</div>
 			</div>
@@ -126,8 +126,10 @@
 						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 						proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-						<br>
-						<a href="#"> View On Github</a>
+
+						<span>
+							<a href="#"> View On Github</a>
+						</span>
 					</p>
 				</div>
 			</div>	
@@ -136,7 +138,7 @@
 	</section>
 
 	<section id="contact" class="contact">
-		<div class="spacing spacing-sections">
+		<div class="spacing">
 			<h2>Contact</h2>
 
 			<p>
