Added text to page

--- a/index.html
+++ b/index.html
@@ -39,28 +39,17 @@
 	<section id="description" class="description">
 		<div class="spacing spacing--description">
 			<p>
-				Hi I'm Stella!
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris.
+				Hello! I'm Stella. I'm a software engineer who specializes in building full-stack and front-end applications.
 			</p>
 
 			<div class="columns columns--description">
 				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					During my studies at Wellesley college, I co-founded an online menswear company for fashionable men who had trouble finding affordable clothing. During this process, I taught myself web development and took programming classes to build the site. I realized I love web development because it enables me to express my creativity while solving technically challenging problems.
 				</p>
 				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					I am proficent in JavaScript, JQuery, Socket.IO, HTML5, CSS3, Bootstrap in the frontend, and  Python, Flask, Pyramid,  SQLAlchemy, SQLite in the backend.
+
+					Want to learn more? Feel free to visit my Linkedin: here.
 				</p>
 			
 		</div>
@@ -71,21 +60,18 @@
 			<h2>My Work</h2>
 			<div class="columns columns--portfolio">
 				<p>
-					<img src="http://loremflickr.com/900/480/cat">
+					<img src="img/lunchship.png">
 				</p>
 
 				<div>
-					<h3>Name Two</h3>
+					<h3>LunchShip</h3>
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+						During Yelp's 18th hackathon with a team of engineers, built an internal web app with an integrated IRC bot that allows Yelp employees to form groups and discover new lunch spots and people. A Yelp employee can create a new group to go to a specific lunch spot through either the web app or the IRC channel, and other employees can join these groups.
+
+						Built using Python, Flask, HTML, CSS, Bootstrap and SQLite.
 
 						<span>
-							<a href="#"> View On Github</a>
+							<a href="https://github.com/Sahil5/LunchShip"> View On Github</a>
 						</span>
 					</p>
 
@@ -93,42 +79,36 @@
 			</div>
 			<div class="columns columns--portfolio">
 				<p>
-					<img src="http://loremflickr.com/900/480/cat">
+					<img src="img/careers-yelp.png" alt="Screenshot of www.yelp.com/careers">
 				</p>
 
 				<div>
-					<h3>Name Two</h3>
+					<h3>Yelp Careers Page</h3>
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-						proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+						I built the redesigned careers website in order to increase the number of Yelp job applicants. With this application, users can search for jobs by location, department, or keywords, and apply using the Lever API.
+
+						Built using Python, Pyramid, Cheetah, HTML, SCSS
 
 						<span>
-							<a href="#"> View On Github</a>
+							<a href="http://www.yelp.com/careers/job-openings"> View On Yelp</a>
 						</span>
 					</p>
 				</div>
 			</div>
 			<div class="columns columns--portfolio">
 				<p>
-					<img src="http://loremflickr.com/900/480/cat">
+					<img src="img/gutenhub.gif" alt="Screenshot gif of Gutenhub website">
 				</p>
 
 				<div>
-					<h3>Name Two</h3>
+					<h3>Gutenhub</h3>
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-						proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+						Gutenhub is an app that allows for collaborative translation of literary works. When a user logs into Gutenhub, they are able to choose a book from some of the most popular novels on Project Gutenberg-- the oldest digital library that focuses on digitizing and archiving books. Along with the API data from GoodReads and Amazon Web Services, a description of the books is displayed to the user. Through the description page, the user can choose to work on a translation project independently or form groups with other members on Gutenhub, and together they can translate a work of literature into the language of their choice.
+
+						Built using Python, Flask, HTML, CSS, JavaScript, Socket.IO, SQLAlchemy, SQLite.
 
 						<span>
-							<a href="#"> View On Github</a>
+							<a href="https://github.com/sodewumi/gutenberg_translate" target="_blank"> View On Github</a>
 						</span>
 					</p>
 				</div>
