Fixed order in comlumns-portfolio

--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
 				</ul>
 			</nav>
 		</div>
-
 	</header>
 
 	<section id="home" class="hero">
@@ -38,19 +37,26 @@
 
 	<section id="description" class="description">
 		<div class="spacing spacing--description">
-			<p>
+			<p class="blurb">
 				Hello! I'm Stella. I'm a software engineer who specializes in building full-stack and front-end applications.
 			</p>
 
 			<div class="columns columns--description">
-				<p>
-					During my studies at Wellesley college, I co-founded an online menswear company for fashionable men who had trouble finding affordable clothing. During this process, I taught myself web development and took programming classes to build the site. I realized I love web development because it enables me to express my creativity while solving technically challenging problems.
-				</p>
-				<p>
-					I am proficent in JavaScript, JQuery, Socket.IO, HTML5, CSS3, Bootstrap in the frontend, and  Python, Flask, Pyramid,  SQLAlchemy, SQLite in the backend.
+				<div>
+					<p>
+						During my studies at Wellesley college, I co-founded an online menswear company for fashionable men who had trouble finding affordable clothing. During this process, I taught myself web development and took programming classes to build the site. I realized I love web development because it enables me to express my creativity while solving technically challenging problems.
+					</p>	
+				</div>
+				<div>
+					<p>
+						I am proficent in JavaScript, JQuery, Socket.IO, HTML5, CSS3, Bootstrap in the frontend, and  Python, Flask, Pyramid,  SQLAlchemy, SQLite in the backend.
+					</p>
+					<p>
+						Want to learn more? Feel free to visit my Linkedin: here.
+					</p>
+				</div>
 
-					Want to learn more? Feel free to visit my Linkedin: here.
-				</p>
+
 			
 		</div>
 	</section>
@@ -58,59 +64,63 @@
 	<section id="portfolio" class="portfolio">
 		<div class="spacing">
 			<h2>My Work</h2>
-			<div class="columns columns--portfolio">
-				<p>
-					<img src="img/lunchship.png">
-				</p>
 
+			<div class="columns columns--portfolio">
 				<div>
-					<h3>LunchShip</h3>
-					<p>
-						During Yelp's 18th hackathon with a team of engineers, built an internal web app with an integrated IRC bot that allows Yelp employees to form groups and discover new lunch spots and people. A Yelp employee can create a new group to go to a specific lunch spot through either the web app or the IRC channel, and other employees can join these groups.
-
-						Built using Python, Flask, HTML, CSS, Bootstrap and SQLite.
-
-						<span>
-							<a href="https://github.com/Sahil5/LunchShip"> View On Github</a>
-						</span>
-					</p>
-
-				</div>
-			</div>
-			<div class="columns columns--portfolio">
-				<p>
 					<img src="img/careers-yelp.png" alt="Screenshot of www.yelp.com/careers">
-				</p>
+				</div>
 
 				<div>
-					<h3>Yelp Careers Page</h3>
+					<h3>Yelp Careers' Page</h3>
+					<p>
+						<em>Tech Stack: Python, Pyramid, Cheetah, HTML, SCSS</em>
+					</p>
 					<p>
 						I built the redesigned careers website in order to increase the number of Yelp job applicants. With this application, users can search for jobs by location, department, or keywords, and apply using the Lever API.
-
-						Built using Python, Pyramid, Cheetah, HTML, SCSS
-
 						<span>
 							<a href="http://www.yelp.com/careers/job-openings"> View On Yelp</a>
 						</span>
 					</p>
 				</div>
 			</div>
+
 			<div class="columns columns--portfolio">
-				<p>
+				<div>
 					<img src="img/gutenhub.gif" alt="Screenshot gif of Gutenhub website">
-				</p>
+				</div>
 
 				<div>
 					<h3>Gutenhub</h3>
 					<p>
+						<em>Tech Stack: Python, Flask, HTML, CSS, JavaScript, Socket.IO, SQLAlchemy, SQLite</em>
+					</p>
+					<p>
 						Gutenhub is an app that allows for collaborative translation of literary works. When a user logs into Gutenhub, they are able to choose a book from some of the most popular novels on Project Gutenberg-- the oldest digital library that focuses on digitizing and archiving books. Along with the API data from GoodReads and Amazon Web Services, a description of the books is displayed to the user. Through the description page, the user can choose to work on a translation project independently or form groups with other members on Gutenhub, and together they can translate a work of literature into the language of their choice.
-
-						Built using Python, Flask, HTML, CSS, JavaScript, Socket.IO, SQLAlchemy, SQLite.
 
 						<span>
 							<a href="https://github.com/sodewumi/gutenberg_translate" target="_blank"> View On Github</a>
 						</span>
 					</p>
+				</div>
+			</div>
+
+			<div class="columns columns--portfolio">
+				<div>
+					<img src="img/lunchship.png">
+				</div>
+
+				<div>
+					<h3>LunchShip</h3>
+					<p>
+						<em>Tech Stack: Python, Flask, HTML, CSS, Bootstrap and SQLite.</em>
+					</p>
+					<p>
+						During Yelp's 18th hackathon with a team of engineers, built an internal web app with an integrated IRC bot that allows Yelp employees to form groups and discover new lunch spots and people. A Yelp employee can create a new group to go to a specific lunch spot through either the web app or the IRC channel, and other employees can join these groups.
+						<span>
+							<a href="https://github.com/Sahil5/LunchShip"> View On Github</a>
+						</span>
+					</p>
+
 				</div>
 			</div>	
 		</div>
